--- a/css/carte.css
+++ b/css/carte.css
@@ -32,6 +32,9 @@ h3 {
 }
 .superconteneur
 {
+  background-image: url(../img/bar.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   display: grid;
   grid-template-columns: 50% 50%;
 }
@@ -42,11 +45,12 @@ h3 {
   align-items: center;
 }
 #divboissons {
+  background-color: #000;
   width: 80%;
   margin: 0.5em;
   padding: 1em;
   border: 0.3em solid #fff;
-  border-radius: 3px; 
+  border-radius: 3px;
 }
 #divboissons h2{
   font-weight: bold;
