--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,532 @@
-/*css pour la mise en place générale de la page */
-* {
-  margin: 0;
-  padding: 0;
+
+*{
+	box-sizing: border-box;
 }
-/* css de la parallax */
+body{
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: "Times New Roman", Times, serif;
+	background-color: #030008;
+}
+
+
+
+
+/**************************************slider*************************************/
+
+
+.contenedor-slider {
+  margin: auto;
+  width: 100%;
+  max-height: 700px;
+  position: relative;
+  overflow: hidden;
+	margin-top: 90px;
+  margin-bottom: 20px;
+}
+
+.slider {
+  display: flex;
+  width: 400%;
+}
+
+.slider__section {
+  width: 100%;
+}
+
+.slider__img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.btn-prev, .btn-next {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  line-height: 40px;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 50%;
+  font-family: monospace;
+	cursor: pointer;
+	z-index: 50;
+}
+
+.btn-prev:hover, .btn-next:hover {
+  color: white;
+}
+
+.btn-prev {
+	height: 10%;
+	width: 5%;
+  left: 10px;
+}
+
+.btn-next {
+	height: 10%;
+	width: 5%;
+  right: 10px;
+}
+
+.main_title{
+  position: absolute;
+  width: 100%;
+	top: 17em;
+	text-align: center;
+	z-index: 20;
+}
+
+.main_title img{
+  opacity: 0.8;
+    width: 100%;
+    max-width: 800px;
+		height: auto;
+
+}
+
+/**************************************CAROUSEL*************************************/
+
+.lSSlideWrapper {
+
+  max-width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+.lSSlideWrapper > .lightSlider:after {
+  clear: both;
+}
+.lSSlideWrapper .lSSlide {
+  -webkit-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+  -webkit-transition: all 1s;
+  -webkit-transition-property: -webkit-transform, height;
+  -moz-transition-property: -moz-transform, height;
+  transition-property: transform, height;
+  -webkit-transition-duration: inherit !important;
+  transition-duration: inherit !important;
+  -webkit-transition-timing-function: inherit !important;
+  transition-timing-function: inherit !important;
+}
+.lSSlideWrapper .lSFade {
+  position: relative;
+}
+.lSSlideWrapper .lSFade > * {
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  margin-right: 0;
+  width: 100%;
+}
+.lSSlideWrapper.usingCss .lSFade > * {
+  opacity: 0;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+  -webkit-transition-duration: inherit !important;
+  transition-duration: inherit !important;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-timing-function: inherit !important;
+  transition-timing-function: inherit !important;
+}
+.lSSlideWrapper .lSFade > *.active {
+  z-index: 10;
+}
+.lSSlideWrapper.usingCss .lSFade > *.active {
+  opacity: 1;
+}
+
+/** /!!! End of core css Should not edit !!!/**/
+/* Pager */
+.lSPager {
+ display: none;
+}
+.lSPager li {
+  display: inline-block;
+}
+.lSPager li a {
+  display: block;
+  padding: 5px;
+}
+.lSPager li.active a {
+  color: #000;
+}
+
+/* End of pager */
+/* slider actions */
+.lSAction a {
+  width: 20px;
+  height: 20px;
+  display: block;
+  border-radius: 50%;
+  border: solid 1px #000;
+  cursor: pointer;
+  color: #000;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.lSAction a.lSPrev {
+  display: block;
+  left: 10px;
+  color: white;
+  font-weight: 800;
+  font-size: 50px;
+  border: none;
+}
+.lSAction a.lSPrev:before {
+  content: '<';
+  display: block;
+}
+.lSAction a.lSNext {
+  display: block;
+  right: 20px;
+  color: white;
+  font-weight: 800;
+  font-size: 50px;
+  border: none;
+}
+.lSAction a.lSNext:before {
+  content: '>';
+  display: block;
+}
+.lSAction a.lSPrev:hover .lSAction a.lSNext:hover {
+  color: black;
+  cursor: pointer;
+}
+.lSAction a.disabled {
+  pointer-events: none;
+}
+
+.cS-hidden {
+  height: 1px;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  overflow: hidden;
+}
+
+.lSSlideOuter {
+  overflow: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.lSSlideOuter .lightSlider,
+.lSSlideOuter .lSPager {
+  padding-left: 0;
+  list-style: none outside none;
+}
+.lSSlideOuter .lightSlider > * {
+  float: left;
+}
+.lSSlideOuter .rightEnd {
+  -webkit-animation: rightEnd 0.3s;
+  animation: rightEnd 0.3s;
+  position: relative;
+}
+.lSSlideOuter .leftEnd {
+  -webkit-animation: leftEnd 0.3s;
+  animation: leftEnd 0.3s;
+  position: relative;
+}
+.lSSlideOuter.lSrtl .rightEnd {
+  -webkit-animation: leftEnd 0.3s;
+  animation: leftEnd 0.3s;
+  position: relative;
+}
+.lSSlideOuter.lSrtl .leftEnd {
+  -webkit-animation: rightEnd 0.3s;
+  animation: rightEnd 0.3s;
+  position: relative;
+}
+
+/*/  GRab cursor */
+.lightSlider {
+  overflow: hidden;
+  margin: 0;
+}
+.lightSlider:before, .lightSlider:after {
+  content: " ";
+  display: table;
+}
+.lightSlider.lsGrab > * {
+  cursor: -webkit-grab;
+  cursor: -moz-grab;
+  cursor: -o-grab;
+  cursor: -ms-grab;
+  cursor: grab;
+}
+.lightSlider.lsGrabbing > * {
+  cursor: move;
+  cursor: -webkit-grabbing;
+  cursor: -moz-grabbing;
+  cursor: -o-grabbing;
+  cursor: -ms-grabbing;
+  cursor: grabbing;
+}
+
+/* END DEFAUL SLIDE CAROUSEL CSS */
+ul {
+  list-style: none outside none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.demo .item {
+  margin-bottom: 60px;
+}
+
+.content-slider li {
+  background-color: #ccc;
+  text-align: center;
+  color: #FFF;
+  height: 20em;
+  min-width: 360px;
+}
+
+
+.content-slider h3 {
+  margin: 0;
+  padding: 70px 0;
+}
+
+.demo {
+  width: 800px;
+}
+
+
+/**************************************PARALLAX*************************************/
+
 .parallax-window {
-  min-height: 25em;
-  background-color: transparent;
+	margin-top: 2em;
+	width: 100%;
+  min-height: 20em;
+  background: transparent;
+
+}
+
+/**************************************PRESENTATION*************************************/
+
+.présentation{
+	display: flex;
+	flex-direction: row;
+	margin: 2em;
+	padding: 2em;
+  background-color: #030008;
+  border-radius: 3px;
+  border: solid 30px #ae2a25;
+}
+
+
+.pres_logo{
+
+		display: flex;
+		width: 100%;
+    height: auto;
+    justify-content: center;
+
+}
+.pres_gauche{
+  width: 100%;
+  min-height: 100%;
+  background-color: #eee;
+  padding: 2em;
+  border-radius: 5px;
+}
+
+.pres_droite{
+	height: auto;
+  background-color: #eee;
+  padding: 2em;
+  margin-left: 3em;
+  border-radius: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.4em;
+}
+
+
+/**************************************CAROUSEL2*************************************/
+
+#img_carou {
+  display: inline-block;
+  width: 200px;
+  height: 100px;
+}
+.carousel {
+	position: absolute;
+  width: 100%;
+  height: 120px;
+  overflow: hidden;
+  padding: 8px;
+  box-sizing: border-box;
+  box-shadow: 0 0 4px #000;
+  margin: 0 auto;
+	border-radius: 5px;
+	margin-bottom: 100px;
+}
+.holder {
+  -webkit-animation: carousel 25s linear infinite;
+          animation: carousel 25s linear infinite;
+  white-space: nowrap;
+  will-change: transform;
+}
+.holder:hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+@-webkit-keyframes carousel {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  50% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+@keyframes carousel {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  50% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+/**************************************FOOTER*************************************/
+
+
+
+#foot2{
+	width: 100%;
+	height: 80px;
+	margin-top: 170px;
+	background-color: #ae2a25;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+}
+
+.contact a{
+	margin: 15px;
+}
+
+.contact i:hover{
+	transform: scale(1.2);
+	color: #eee;
+  transition: all 0.4s ease-in-out;
+}
+
+/*
+.footer{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 20px;
+
+}
+/********************************** BACK TO TOP ***********************************/
+
+a#cRetour {
+  border-radius: 3px;
+  padding: 10px;
+  font-size: 15px;
+  text-align: center;
+  color: #fff;
+  background: #ae2a25;
+  position: fixed;
+  right: 20px;
+  opacity: 1;
+  z-index: 99999;
+  transition: all ease-in 0.2s;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  text-decoration: none;
+}
+
+a#cRetour:before {
+  content: "\25b2";
+}
+
+a#cRetour:hover {
+  background: rgba(0, 0, 0, 1);
+  transition: all ease-in 0.2s;
+}
+
+a#cRetour.cInvisible {
+  bottom: -35px;
+  opacity: 0;
+  transition: all ease-in 0.5s;
+}
+
+a#cRetour.cVisible {
+  bottom: 20px;
+  opacity: 1;
+}
+
+
+/**************************************MEDIA QUERIES*************************************/
+
+@media only screen and (max-width: 960px) {
+
+
+
+}
+
+
+@media only screen and (max-width: 720px) {
+
+  .main_title{
+    top: 12em;
+  }
+  .main_title img{
+      max-width: 300px;
+  }
+  .présentation{
+		flex-wrap: wrap;
+    justify-content: center;
+    border: none;
+    margin: 0;
+  }
+  .pres_gauche{
+    padding: 1em;
+    border-radius: 5px 5px 0 0;
+  }
+
+  .pres_droite{
+    margin-left: 0;
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
+  }
+
+	.pres_droite p{
+		margin-top: 0;
+	}
+
 }
