Modifications du css contact

--- a/css/contact.css
+++ b/css/contact.css
@@ -2,12 +2,19 @@ body {
 background-color: #000;
 color: #fff;
 }
+.blockcontact {
+  min-height: 61vh;
+  margin-top: 7em;
+  margin-left: 2em;
+  margin-right: 2em;
+  border: 0.5em solid #aa2b26;
+  border-radius: 3em;
+}
 .entetecontact{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  padding-top: 5em;
+  margin-top: 1em;
 }
 .titrecontact {
   text-align: center;
@@ -24,28 +31,36 @@ color: #fff;
   text-align: center;
   padding-top: 6em;
   display: flex;
-  flex: 1 1 auto;
+  flex: 1 1;
   flex-wrap: wrap;
   justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
-.zonetext {
-  height: 15em;
+.message {
+  display: flex;
   color : #000;
-  margin-left: 2em;
+  height: 15em;
+  margin-left: 1em;
 }
-.name, .mail, .object {
-width: 10em;
-color : #000;
+.name, .email, .object {
+  display: flex;
+  justify-content: space-around;
+  width: 25em;
+  color : #000;
 }
-.name,.mail, .object, .zonetext, .send {
+.name, .email, .object, .message, .send {
   background-color: #fff;
+  margin-top: 0.5em;
   padding: 0.5em;
 }
-.mail, .object, .send, .textarea {
+.mail, .object, .send, .message {
   margin-top: 1em;
 }
 .send {
   color: #aa2b26;
   font-family: 'Lalezar', cursive;
+}
+.object {
+  margin-bottom: 4em;
 }
