--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ body{
 .contenedor-slider {
   margin: auto;
   width: 100%;
-  max-height: 700px;
+  max-height: 1100px;
   position: relative;
   overflow: hidden;
 	margin-top: 90px;
@@ -110,10 +110,11 @@ body{
 .main_title img{
   opacity: 0.8;
     width: 100%;
-    max-width: 800px;
+    max-width: 1000px;
 		height: auto;
 
 }
+
 
 /**************************************CAROUSEL*************************************/
 
@@ -318,7 +319,7 @@ ul {
   background-color: #ccc;
   text-align: center;
   color: #FFF;
-  height: 20em;
+  height: 28em;
   min-width: 360px;
 }
 
@@ -515,10 +516,11 @@ a#cRetour.cVisible {
 
 
 /**************************************MEDIA QUERIES*************************************/
-
 @media only screen and (max-width: 960px) {
 
-
+  .main_title img{
+    max-width: 400px;
+}
 
 }
 
