--- a/css/contact.css
+++ b/css/contact.css
@@ -39,6 +39,7 @@ color: #fff;
 }
 .message {
   display: flex;
+  flex: 1 1 auto;
   color : #000;
   height: 15em;
   margin-left: 1em;
@@ -63,4 +64,11 @@ color: #fff;
 }
 .object {
   margin-bottom: 4em;
+}
+@media (max-width: 900px){
+  .message {
+    flex-direction: column;
+    justify-content: center;
+    width: 20em;
+  }
 }
