--- a/css/carte.css
+++ b/css/carte.css
@@ -65,6 +65,10 @@ h3 {
   border-radius: 1em;
   z-index: 0;
 }
+.itemboisson {
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
 @media (max-width: 900px){
   .conteneurboisson {
     flex-wrap: wrap;
