--- a/css/contact.css
+++ b/css/contact.css
@@ -6,8 +6,6 @@ color: #fff;
   margin-top: 8em;
   margin-left: 2em;
   margin-right: 2em;
-  border: 0.5em solid #aa2b26;
-  border-radius: 3em;
 }
 .entetecontact{
   display: flex;
@@ -36,6 +34,9 @@ color: #fff;
   justify-content: center;
   justify-content: space-around;
   align-items: center;
+  margin-top: 5em;
+  border: 0.5em solid #aa2b26;
+  border-radius: 3em;
 }
 .message {
   display: flex;
@@ -70,5 +71,8 @@ color: #fff;
     flex-direction: column;
     justify-content: center;
     width: 20em;
+  }
+  .imgk {
+    display: none;
   }
 }
